# OptiX-GPU-Path-Tracer

./: .gitignore  CMakeLists.txt  README.md  build_and_run.bat
device/: device.cu
include/: LaunchParams.h
include/optix_path_tracer/: cuda_buffer.h  error_check.h  image_writer.h  math_utils.h  obj_loader.h  optix_renderer.h  scene.h  scene_loader.h  shared_types.h
model/cornellbox/: scene.json
src/: image_writer.cpp  main.cpp  obj_loader.cpp  optix_function_table.cpp  optix_renderer.cpp  scene_loader.cpp
src/device/: device.cu
